[package]
name = "graph-ers"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/main.rs"
[dependencies]
eframe = "0.27.2"
egui_autocomplete = {path = "egui_autocomplete"}
egui_plot = {version =  "0.27.2", features = [] }
env_logger = "0.11.3"
itertools = "0.12.1"
prse = "1.2.1"
rand = "0.8.5"
regex = "1.10.4"
log = "0.4.21"
thiserror = "1.0.59"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
